experimentally replace Jersey with the HTTP client from the JDK